
syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package au.coaas.csi.proto;

import "CQPService.proto";

message Empty {}

message CSIResponse {
    string status = 1;
    string body = 2;
    CSSummary summary = 3;
    repeated string hashkeys = 4;
}

message CSSummary {
    string id = 1;
    double price = 2;
    uint64 freshness = 3;
    double fthresh = 4;
}

message ContextService
{
    string json = 1;
    string mongoID = 2;
    int32 times = 3;
    map<string,string> params = 4;
    string reportAccess = 5;
    bool updateRegistry = 6;
    au.coaas.cqp.proto.ContextEntity subEntity = 7;
    string jobParamHash = 8;
    uint64 cpIndex = 9;
}

message ContextServiceInvokerRequest
{
    ContextService contextService = 1;
    map<string,string> params = 2;
}

message ContextMappingRequest {
    string jsonResponse = 1;
    string attributes = 2;
}

message CPMonitor {
    string contextID = 1;
    au.coaas.cqp.proto.ContextEntity contextEntity = 2;
    bool  delete = 3;
    string providerID = 4;
}

service CSIService {
    rpc fetch (ContextServiceInvokerRequest) returns (CSIResponse);
    rpc createFetchJob (ContextService) returns (CSIResponse);
    rpc updateFetchJob (ContextService) returns (CSIResponse);
    rpc cancelFetchJob (ContextService) returns (CSIResponse);
    rpc mapToEntity (ContextMappingRequest) returns (CSIResponse);
    rpc modifyCPMonitor (CPMonitor) returns (Empty);
}